# rgarmin

./: .gitignore  .ruff.toml  README.md  api.py  package.json  pyproject.toml  requirements.txt  script.py  setup.cfg  tailwind.config.js
.github/workflows/: pytests.yaml
rgarmin/: client.py  client_mock.py  filters.py
rgarmin/services/: activities.py
rgarmin/types/: __init__.py  activity.py  connection.py  profile.py  settings.py  summary.py
templates/: _base.html.jinja2  activities.html.jinja2  activities.js  connections.html.jinja2  connections.js  index.html.jinja2
